--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -66,7 +66,7 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Weekly Meetings</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About us</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about-us/">About us</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
             </nav>
           </div>
@@ -92,8 +92,8 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="">Home</a>
           <a class="mdl-navigation__link" href="">Blog</a>
-          <a class="mdl-navigation__link" href="">About us</a>
-          <a class="mdl-navigation__link" href="">Contact us</a>
+          <a class="mdl-navigation__link" href="/about-us/">About us</a>
+          <a class="mdl-navigation__link" href="/contact-us/">Contact us</a>
           <a class="mdl-navigation__link" href="">Join Slack</a>
           <div class="android-drawer-separator"></div>
           <span class="mdl-navigation__link" href="">Events</span>
