--- a/landingsite/templates/landingsite/thanks.html
+++ b/landingsite/templates/landingsite/thanks.html
@@ -66,8 +66,8 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Weekly Meetings</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About us</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Contact us</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about-us/">About us</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
             </nav>
           </div>
           <!-- <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
@@ -92,8 +92,8 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="">Home</a>
           <a class="mdl-navigation__link" href="">Blog</a>
-          <a class="mdl-navigation__link" href="">About us</a>
-          <a class="mdl-navigation__link" href="">Contact us</a>
+          <a class="mdl-navigation__link" href="/about-us/">About us</a>
+          <a class="mdl-navigation__link" href="/contact-us/">Contact us</a>
           <a class="mdl-navigation__link" href="">Join Slack</a>
           <div class="android-drawer-separator"></div>
           <span class="mdl-navigation__link" href="">Events</span>
