--- a/landingsite/templates/landingsite/about_us.html
+++ b/landingsite/templates/landingsite/about_us.html
@@ -1,188 +1,52 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!doctype html>
-<!--
-  Material Design Lite
-  Copyright 2015 Google Inc. All rights reserved.
 
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
+{% block content %}
 
-      https://www.apache.org/licenses/LICENSE-2.0
+<a name="top"></a>
+<div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/slide01.jpg' %})
+center 30% no-repeat;height:330px;">
+  <div class="android-font android-slogan">Code for Everyone</div>
+  <div class="android-font android-sub-slogan">About us</div>
+  <div class="android-font android-create-character">
+    <a href=""><img src="{% static 'landingsite/images/andy.png' %}" style="color:#ffffff;"></a>
+  </div>
+</div>
+<div class="mdl-grid">
 
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License
--->
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Code for everyone (formally MOOC Circle) site">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Code for Everyone</title>
-
-    <!-- Page styles -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.indigo-pink.min.css" />
-    <link rel="stylesheet" href="{% static 'landingsite/css/styles.css' %}">
-    <style>
-    #view-source {
-      position: fixed;
-      display: block;
-      right: 0;
-      bottom: 0;
-      margin-right: 40px;
-      margin-bottom: 40px;
-      z-index: 900;
-    }
-    </style>
-    <!-- Analytics -->
-    <script type="text/javascript">
-    !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
-    analytics.load("st84JOhemrqvWhw6f3XEsQ23wR1ORRcz");
-    analytics.page()
-    }}();
-  </script>
-  </head>
-  <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
-      <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
-        <div class="mdl-layout__header-row">
-          <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
-          </span>
-          <!-- Add spacer, to align navigation to the right in desktop -->
-          <div class="android-header-spacer mdl-layout-spacer"></div>
-          <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
-              <i class="material-icons">search</i>
-            </label>
-            <div class="mdl-textfield__expandable-holder">
-              <input class="mdl-textfield__input" type="text" id="search-field" />
-            </div>
-          </div>
-          <!-- Navigation -->
-          <div class="android-navigation-container">
-            <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" id="tt2" href="#">Weekly Meetings</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about-us/">About us</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
-            </nav>
-          </div>
-          <div class="mdl-tooltip mdl-tooltip--large" for="tt2">
-              Coming soon
-            </div>
-          <!-- <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
-            <i class="material-icons">more_vert</i>
-          </button>
-          <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item">5.0 Lollipop</li>
-            <li class="mdl-menu__item">4.4 KitKat</li>
-            <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
-            <li class="mdl-menu__item">Android History</li>
-          </ul> -->
-          <span class="android-mobile-title mdl-layout-title">
-            <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
-          </span>
-        </div>
-      </div>
-
-      <div class="android-drawer mdl-layout__drawer">
-        <span class="mdl-layout-title">
-          <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
-        </span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/">Home</a>
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" id="tt2" href="#">Weekly Meetings</a>
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about-us/">About us</a>
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" href="http://join.codeforeveryone.co">Join Slack</a>
-          <div class="android-drawer-separator"></div>
-          <span class="mdl-navigation__link mdl-typography--text-uppercase" href="">Events</span>
-          <a class="mdl-navigation__link mdl-typography--text-uppercase" href="http://djangogirls.org/seoul">Django Girls Seoul</a>
-        </nav>
-      </div>
-
-      <div class="android-content mdl-layout__content">
-        <a name="top"></a>
-        <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/slide01.jpg' %})
-        center 30% no-repeat;height:330px;">
-          <div class="android-font android-slogan">Code for Everyone</div>
-          <div class="android-font android-sub-slogan">About us</div>
-          <div class="android-font android-create-character">
-            <a href=""><img src="{% static 'landingsite/images/andy.png' %}" style="color:#ffffff;"></a>
-          </div>
-        </div>
-        <div class="mdl-grid">
-
-          <div class="mdl-cell mdl-cell--12-col">
-          </div>
-          <div class="mdl-cell mdl-cell--3-col">
-            <div>
-            <h5 class="center-align">About</h5>
-            <ul>
-              <li>Code for Everyone</li>
-              <li>Our team</li>
-              <li>Press</li>
-             </ul>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-cell--8-col">
-            <div>
-            <h5 class="center-align">Code for Everyone</h5>
-            </div>
-            <p>Code for Everyone is a programming community whose members vary in programming knowledge and ability from absolute beginners to professional programmers, but all share a common interest: code. We are based in Seoul, South Korea but our community has no borders. Our goals are to: </p>
-
-                <h5>Educate and Connect</h5>
-
-              <p>We aim to educate and connect motivated members of the local community. Our philosophy is to learn by doing and master by teaching. This model of learning not only benefits and empowers the learner but also gives back to and helps build the community. We have regular biweekly meetups that include short lessons on a variety of IT topics and some time for self-study where members are always available to help get each-other unstuck.</p>
-                <h5>Inspire and Share</h5>
-
-              <p>We believe in inspiring people with open education and sharing knowledge. Besides organizing the occasional event, workshop or hackathon we also like to collaborate with other organizations and share our experience by giving short presentations at other events.</p>
-
-              <h5>Help Non-profits</h5>
-
-              <p>Learning by doing and giving back to the community are both pillars of our community. This is why we enjoy helping both local and global non-profits with their IT needs. These projects not only give members assisted practice with a concrete goal that can build their portfolio, but also help communities and organizations that need it most. </p>
-
-              <p> If your non-profit organization is in need of our services please visit the <a href="/contact-us">Contact us</a> page.</p>
-
-          </div>
-          </div>
-        <footer class="android-footer mdl-mega-footer">
-          <div class="mdl-mega-footer--top-section">
-            <div class="mdl-mega-footer--left-section">
-              <!-- <button class="mdl-mega-footer--social-btn"><i class="material-icons">website</i></button>
-              &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button>
-              &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button> -->
-            </div>
-            <div class="mdl-mega-footer--right-section">
-            </div>
-          </div>
-
-          <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">© Code For Everyone</p>
-            <p class="mdl-typography--font-light">Seoul, South Korea</p>
-          </div>
-
-          <div class="mdl-mega-footer--bottom-section">
-            <a class="android-link mdl-typography--font-light" href="/hacks/">Hacks</a>
-            <a class="android-link mdl-typography--font-light" href="http://mooccircle.github.io">MOOC Circle</a>
-          </div>
-        </footer>
-      </div>
+  <div class="mdl-cell mdl-cell--12-col">
+  </div>
+  <div class="mdl-cell mdl-cell--3-col">
+    <div>
+    <h5 class="center-align">About</h5>
+    <ul>
+      <li>Code for Everyone</li>
+      <li>Our team</li>
+      <li>Press</li>
+     </ul>
     </div>
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
+  </div>
+  <div class="mdl-cell mdl-cell--8-col">
+    <div>
+    <h5 class="center-align">Code for Everyone</h5>
+    </div>
+    <p>Code for Everyone is a programming community whose members vary in programming knowledge and ability from absolute beginners to professional programmers, but all share a common interest: code. We are based in Seoul, South Korea but our community has no borders. Our goals are to: </p>
 
+        <h5>Educate and Connect</h5>
 
-  </body>
-</html>
+      <p>We aim to educate and connect motivated members of the local community. Our philosophy is to learn by doing and master by teaching. This model of learning not only benefits and empowers the learner but also gives back to and helps build the community. We have regular biweekly meetups that include short lessons on a variety of IT topics and some time for self-study where members are always available to help get each-other unstuck.</p>
+        <h5>Inspire and Share</h5>
+
+      <p>We believe in inspiring people with open education and sharing knowledge. Besides organizing the occasional event, workshop or hackathon we also like to collaborate with other organizations and share our experience by giving short presentations at other events.</p>
+
+      <h5>Help Non-profits</h5>
+
+      <p>Learning by doing and giving back to the community are both pillars of our community. This is why we enjoy helping both local and global non-profits with their IT needs. These projects not only give members assisted practice with a concrete goal that can build their portfolio, but also help communities and organizations that need it most. </p>
+
+      <p> If your non-profit organization is in need of our services please visit the <a href="/contact-us">Contact us</a> page.</p>
+
+  </div>
+  </div>
+
+{% endblock content %}
+
