add context processor and githash to base template

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -179,6 +179,7 @@
           <div class="mdl-mega-footer--middle-section">
             <p class="mdl-typography--font-light">© Code For Everyone</p>
             <p class="mdl-typography--font-light">Seoul, South Korea</p>
+            <p class="mdl-typography--font-light">{{ git_hash }}</p>
           </div>
 
           <div class="mdl-mega-footer--bottom-section">
@@ -190,7 +191,5 @@
     </div>
     <a href="https://github.com/MOOCCircle/codeforeveryone" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
-
-
   </body>
 </html>
