--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -96,7 +96,9 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
+            <a href="/">
+              <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
+            </a>
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -120,15 +122,6 @@
           <div class="mdl-tooltip mdl-tooltip--large" for="tt2">
               Coming soon
             </div>
-          <!-- <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
-            <i class="material-icons">more_vert</i>
-          </button>
-          <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item">5.0 Lollipop</li>
-            <li class="mdl-menu__item">4.4 KitKat</li>
-            <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
-            <li class="mdl-menu__item">Android History</li>
-          </ul> -->
           <span class="android-mobile-title mdl-layout-title">
             <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
           </span>
@@ -162,11 +155,9 @@
         <footer class="android-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
             <div class="mdl-mega-footer--left-section">
-              <!-- <button class="mdl-mega-footer--social-btn"><i class="material-icons">website</i></button>
-              &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button>
-              &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button> -->
+              <p class="mdl-typography--font-light">
+                © Code For Everyone  |  Seoul, South Korea
+              </p>
             </div>
             <div class="mdl-mega-footer--right-section">
               <a class="mdl-typography--font-light" href="#top">
@@ -176,15 +167,12 @@
             </div>
           </div>
 
-          <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">© Code For Everyone</p>
-            <p class="mdl-typography--font-light">Seoul, South Korea</p>
-            <p class="mdl-typography--font-light">{{ git_hash }}</p>
-          </div>
-
           <div class="mdl-mega-footer--bottom-section">
             <a class="android-link mdl-typography--font-light" href="/hacks/">Hacks</a>
             <a class="android-link mdl-typography--font-light" href="http://mooccircle.github.io">MOOC Circle</a>
+            <a class="android-link mdl-typography--font-light" href="https://github.com/CodeforeveryoneSeoul/codeforeveryone/commit/{{ git_hash }}">
+              {{ git_hash }}
+            </a>
           </div>
         </footer>
       </div>
