super easy client side validation

--- a/landingsite/templates/landingsite/contact_us.html
+++ b/landingsite/templates/landingsite/contact_us.html
@@ -26,13 +26,13 @@
           </div>
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input class="mdl-textfield__input" type="text" id="full_name" name="full_name" />
+              <input class="mdl-textfield__input" type="text" id="full_name" name="full_name" required/>
               <label class="mdl-textfield__label" for="full_name">Name</label>
             </div>
           </div>
           <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="email" id="email" name="email"/>
+            <input class="mdl-textfield__input" type="email" id="email" name="email" required/>
             <label class="mdl-textfield__label" for="email">Email Address</label>
           </div>
         </div>
