--- a/landingsite/templates/landingsite/contact_us.html
+++ b/landingsite/templates/landingsite/contact_us.html
@@ -18,7 +18,7 @@
             </button>
           </a>
         </div><br><br>
-        <form action="{% url 'landingsite:index' %}" method="post" >
+        <form action="{% url 'landingsite:contact' %}" method="post" >
           {% csrf_token %}
         <div class="mdl-grid">
 
