--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -41,7 +41,7 @@ center 30% no-repeat;">
 <div class="android-wear-section" style="background: url( {% static 'landingsite/images/hack.jpg' %}) center top no-repeat;">
   <div class="android-wear-band">
     <div class="android-wear-band-text">
-      <div class="mdl-typography--display-2 mdl-typography--font-thin">Work for nonprofit</div>
+      <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Work for nonprofits</div>
       <p class="mdl-typography--headline mdl-typography--font-thin">
       </p>
       <p>
