changed label format and spacing

--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -7,7 +7,8 @@
 <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/slide01.jpg' %})
 center 30% no-repeat;">
   <div class="android-font android-slogan">print ("Hello World")</div>
-  <div class="android-font android-sub-slogan">Welcome to Code for Everyone... be yourself. do your thing. see what's going on.</div>
+  <div class="android-font android-sub-slogan">Welcome to Code for Everyone... </div>
+  <div class="android-font android-sub-slogan">Be yourself. Do your thing. See what's going on.</div>
 
 
   <a href="#screens">
@@ -18,7 +19,7 @@ center 30% no-repeat;">
 </div>
 <div class="android-customized-section">
   <div class="android-customized-section-text">
-    <div id="screens" class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Teach programming openly and freely with biweekly meetups</div>
+    <div id="screens" class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Teach and Learn</div>
     <p class="mdl-typography--font-light">
 
       <br>
@@ -29,7 +30,7 @@ center 30% no-repeat;">
 </div>
 <div class="android-customized-section">
   <div class="android-customized-section-text">
-    <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Workshops/Hackathons</div>
+    <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Workshops and Hackathons</div>
     <p class="mdl-typography--font-light">
 
       <br>
