--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -6,8 +6,8 @@
 <a name="top"></a>
 <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/slide01.jpg' %})
 center 30% no-repeat;">
-  <div class="android-font android-slogan">print ("Hello World")</div>
-  <div class="android-font android-sub-slogan">Welcome to Code for Everyone... </div>
+  <div class="android-font android-slogan">print ("Code For Everyone")</div>
+  
   <div class="android-font android-sub-slogan">Be yourself. Do your thing. See what's going on.</div>
 
 
