--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -50,6 +50,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.indigo-pink.min.css" />
     <link rel="stylesheet" href="{% static 'landingsite/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'landingsite/css/messages.css' %}">
     {% block css %}{% endblock css %}
     <style>
     #view-source {
@@ -109,6 +110,14 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about-us/">About us</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
+              {% if request.user.is_anonymous %}
+                <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/accounts/login">Login</a>
+                <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/accounts/register">Register</a>
+              {% endif %}
+              {% if not request.user.is_anonymous %}
+                <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/accounts/login">{{ request.user }}</a>
+                <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{% url 'accounts:logout' %}">Logout</a>
+              {% endif %}
             </nav>
           </div>
           <div class="mdl-tooltip mdl-tooltip--large" for="tt2">
@@ -139,6 +148,13 @@
 
       <div class="android-content mdl-layout__content">
         <div class="content">
+          {% if messages %}
+          <ul class="messages">
+              {% for message in messages %}
+              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+              {% endfor %}
+          </ul>
+          {% endif %}
           {% block content %}
             {# your html goes here #}
           {% endblock content %}
