initial test for rsvp

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -69,6 +69,7 @@
     analytics.page()
     }}();
   </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
   <body {% block body_bg %}{% endblock body_bg %}>
   {% block fb_init %}
