add default template for flatpages

--- a/code4every1site/templates/flatpages/aboutus.html
+++ b/code4every1site/templates/flatpages/aboutus.html
@@ -1,9 +1,6 @@
-{% extends "base.html" %}
+{% extends "flatpages/default.html" %}
 {% load staticfiles %}
 
-{% block title_tag %}
-  <title>{{ flatpage.title }}</title>
-{% endblock title_tag %}
 
 {% block content %}
 <a name="top"></a>
