add duration field, make it all look pretty...er

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -122,7 +122,7 @@
           <!-- Navigation -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" id="tt2" href="#">Weekly Meetings</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" id="tt2" href="/rsvp/">Meetings</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about-us/">About us</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
@@ -136,9 +136,6 @@
               {% endif %}
             </nav>
           </div>
-          <div class="mdl-tooltip mdl-tooltip--large" for="tt2">
-              Coming soon
-            </div>
           <span class="android-mobile-title mdl-layout-title">
             <img class="android-logo-image" src="{% static 'landingsite/images/logo_jin_1.png' %}">
           </span>
