make slug readonly, setup upcoming and past events

--- a/rsvp/templates/rsvp/events_list.html
+++ b/rsvp/templates/rsvp/events_list.html
@@ -16,10 +16,34 @@
           </a>
         </div>
         <div class="android-more-section">
-          <div class="android-section-title mdl-typography--display-1-color-contrast">Check them out</div>
+          <div class="android-section-title mdl-typography--display-1-color-contrast">Upcoming Events</div>
           <div class="android-card-container mdl-grid" id="posts">
-            {% if events %}
-              {% for event in events %}
+            {% if upcoming_events or past_events %}
+              {% for event in upcoming_events %}
+              <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
+                <div class="mdl-card__media">
+                  {% if hack.cover_photo %}
+                  <img src="{{ hack.cover_photo.url }}">
+                  {% endif %}
+                </div>
+                <div class="mdl-card__title">
+                   <h4 class="mdl-card__title-text">{{ event.title }}</h4>
+                </div>
+                <div class="mdl-card__supporting-text">
+                  <span class="mdl-typography--font-light mdl-typography--subhead">{{ event.notes|truncatechars:100 }}</span>
+                </div>
+                <div class="mdl-card__actions">
+                   <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="{{ event.title }}">
+                    Learn More
+                     <i class="material-icons">chevron_right</i>
+                   </a>
+                </div>
+              </div>
+              {% endfor %}
+              </div>
+              <div class="android-section-title mdl-typography--display-1-color-contrast">Past Events</div>
+              <div class="android-card-container mdl-grid" id="posts">
+              {% for event in past_events %}
               <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
                 <div class="mdl-card__media">
                   {% if hack.cover_photo %}
